syntax = "proto3";



option java_package = "com.github.longylg.grpc";
option java_outer_classname = "HelloWorldProto";
option java_multiple_files = true;

package helloWorld;

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    //双向流
    rpc uploadFile (stream FileRequest) returns (stream FileReply) {
    }
    //单向流
    rpc reqStreamSayHello (stream HelloRequest) returns (HelloReply) {
    }

    rpc respStreamSayHello (HelloRequest) returns (stream HelloReply) {
    }
}

message HelloRequest {
    string name = 1;
    string id = 2;
}

message HelloReply {
    string message = 1;
}

message FileRequest {
    bytes blob = 1;
    string id = 2;
}

message FileReply {
    string path = 1;
}